2009-07-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add new infrastructure which is more
	reliable about generating cases which hit interrupt critical
	sections. Remove sp41 since it used its own mechanism.
	* spintrcritical01/.cvsignore, spintrcritical01/Makefile.am,
	spintrcritical01/init.c, spintrcritical01/spintrcritical01.doc,
	spintrcritical01/spintrcritical01.scn, spintrcritical02/.cvsignore,
	spintrcritical02/Makefile.am, spintrcritical02/spintrcritical02.doc,
	spintrcritical02/spintrcritical02.scn, spintrcritical03/.cvsignore,
	spintrcritical03/Makefile.am, spintrcritical03/spintrcritical03.doc,
	spintrcritical03/spintrcritical03.scn, spintrcritical04/.cvsignore,
	spintrcritical04/Makefile.am, spintrcritical04/spintrcritical04.doc,
	spintrcritical04/spintrcritical04.scn, spintrcritical05/.cvsignore,
	spintrcritical05/Makefile.am, spintrcritical05/spintrcritical05.doc,
	spintrcritical05/spintrcritical05.scn: New files.
	* sp41/.cvsignore, sp41/Makefile.am, sp41/init.c, sp41/sp41.scn,
	sp41/system.h: Removed.

2009-07-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp41/init.c: Remove incorrect comment.

2009-07-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp29/init.c: Simple binary semaphores can not be inherit priority.

2009-07-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp25/init.c: Spacing.

2009-07-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add sp59 to test path through
	_Thread_queue_First_priority where the task's priority was in the
	bottom 1/4 of the range.
	* sp59/.cvsignore, sp59/Makefile.am, sp59/init.c, sp59/sp59.doc,
	sp59/sp59.scn: New files.

2009-07-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add test for Thread Queue extract a thread
	not blocked on a thread queue.
	* spthreadq01/.cvsignore, spthreadq01/Makefile.am, spthreadq01/init.c,
	spthreadq01/spthreadq01.doc, spthreadq01/spthreadq01.scn: New files.
