@@ -1,5 +1,10 @@
 2009-07-10	Joel Sherrill <joel.sherrill@OARcorp.com>
 
+	* spintrcritical_support/intrcritical.c,
+	spintrcritical_support/intrcritical.h: New files.
+
+2009-07-10	Joel Sherrill <joel.sherrill@OARcorp.com>
+
 	* Makefile.am, configure.ac: Add new infrastructure which is more
 	reliable about generating cases which hit interrupt critical
 	sections. Remove sp41 since it used its own mechanism.
